--- a/components/modules/Card.module.css
+++ b/components/modules/Card.module.css
@@ -13,6 +13,8 @@
 .container .image {
   width: 100%;
   border-radius: 5px;
+  z-index: 0;
+  object-fit: cover;
 }
 
 .details {
@@ -22,6 +24,7 @@
   color: grey;
   font-size: 0.85rem;
   margin: 22px 0;
+  z-index: 10;
 }
 
 .details h4 {
@@ -34,6 +37,7 @@
   display: flex;
   justify-content: left !important;
   align-items: center;
+  z-index: 10;
 }
 
 .container a {
